# rosCLIPS60

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  package.xml  readme.MD
bridge/: .gitignore  CMakeLists.txt
bridge/include/: .gitignore  clips_bridge.h  clipswrapper.h  clipswrapperrouter.h  queryrouter.h  sync_queue.h  utils.h
bridge/src/: .gitignore  clips_bridge.cpp  clipswrapper.cpp  clipswrapperrouter.cpp  queryrouter.cpp
clips60/: .gitignore  CMakeLists.txt  LICENSE  readme.MD
clips60/include/clips/: agenda.h  argacces.h  classfun.h  classinf.h  classini.h  classpsr.h  clsltpsr.h  commline.h  constrct.h  constrnt.h  crstrtgy.h  cstrccom.h  cstrcpsr.h  cstrnutl.h  default.h  defins.h  developr.h  dffctbin.h  dffctbsc.h  dffnxexe.h  dffnxfun.h  drive.h  ed.h  engine.h  expressn.h  exprnbin.h  exprnops.h  extnfunc.h  extobj.h  factcom.h  factgen.h  facthsh.h  factmngr.h  factprt.h  factrete.h  filertr.h  genrccmp.h  genrccom.h  genrcexe.h  globlbin.h  (+40 more)
clips60/src/: argacces.c  bload.c  bsave.c  classinf.c  classpsr.c  clsltpsr.c  constrct.c  crstrtgy.c  cstrcbin.c  cstrccom.c  cstrcpsr.c  cstrnbin.c  cstrnchk.c  cstrncmp.c  cstrnops.c  cstrnpsr.c  default.c  defins.c  developr.c  dffctdef.c  dffctpsr.c  dffnxbin.c  dffnxexe.c  dffnxfun.c  dffnxpsr.c  dfinsbin.c  drive.c  edterm.c  emathfun.c  evaluatn.c  exprnbin.c  exprnops.c  exprnpsr.c  extnfunc.c  factbld.c  facthsh.c  factmch.c  factmngr.c  factprt.c  factrete.c  (+44 more)
clipscontrol/: .gitignore  CMakeLists.txt  hotkey.cpp  hotkey.h  main.cpp  namespace.h  ncfilepickermw.cpp  ncfilepickermw.h  ncursesdialogwin.cpp  ncursesdialogwin.h  ncurseswin.cpp  ncurseswin.h
doc/: .gitignore
include/: clips_bridge.h  clipswrapper.h  sync_queue.h  utils.h
include/clips/: analysis.h  bload.h  bmathfun.h  bsave.h  classcom.h  classexm.h  clips.h  clipsmem.h  conscomp.h  constant.h  cstrcbin.h  cstrnbin.h  cstrnchk.h  cstrncmp.h  cstrnops.h  cstrnpsr.h  dffctcmp.h  dffctdef.h  dffctpsr.h  dffnxbin.h  dffnxcmp.h  dffnxpsr.h  dfinsbin.h  dfinscmp.h  evaluatn.h  exprnpsr.h  factbin.h  factbld.h  factcmp.h  factlhs.h  factmch.h  factrhs.h  filecom.h  generate.h  genrcbin.h  genrcfun.h  genrcpsr.h  globlcmp.h  globlcom.h  globldef.h  (+38 more)
pyGUI/: .gitignore  controlgui.py  controlnode.py  pyGUI.py
rosclips/: .gitignore  CMakeLists.txt  bridge.cpp  bridge.h  cubes.clp  main.cpp
rosclips/include/: clipswrapper.h  dummy_func.h
rosclips/src/: clips_bridge.cpp  clipswrapper.cpp  dummy_func.c  main.cpp  utils.cpp
src/: .gitignore  clips_bridge.cpp  clipswrapper.cpp  cubes.clp  dummy_func.cpp  main.cpp
src/clips/: agenda.c  analysis.c  bmathfun.c  classcom.c  classexm.c  classfun.c  classini.c  commline.c  conscomp.c  constrnt.c  cstrnutl.c  dffctbin.c  dffctbsc.c  dffctcmp.c  dffnxcmp.c  dfinscmp.c  edbasic.c  edmain.c  edmisc.c  edstruct.c  engine.c  expressn.c  factbin.c  factcmp.c  factcom.c  factgen.c  factlhs.c  factrhs.c  generate.c  genrcbin.c  genrcpsr.c  globlbin.c  globlcmp.c  globlcom.c  globldef.c  globlpsr.c  immthpsr.c  incrrset.c  inherpsr.c  insfun.c  (+35 more)
testnode/: .gitignore  CMakeLists.txt  main.cpp
